--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ footer {
     background: rgba(163, 167, 255, 0.3);
     width: 1440px;
     height: 70px;
-    padding: 26px px;
+    padding: 26px 0px;
     /* Стили для футера */
 }
 
