--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header span {
 
 .main-image {
     max-width: 715px;
-    background-color: ;
+    background-color: #fafaff;;
     /* Стили для изображения в первой секции */
 }
 
